add redact option for config downloads

--- a/indi_allsky/flask/templates/config_list.html
+++ b/indi_allsky/flask/templates/config_list.html
@@ -38,7 +38,10 @@ var camera_id = {{ camera_id }};
       <td>{{ config.username }}</td>
       <td>{{ config.level }}</td>
       <td>{{ config.encrypted }}</td>
-      <td><a href="{{ url_for('indi_allsky.config_download_view', id=config.id) }}" class="text-decoration-none link-info"><span class="badge bg-primary">Download</span></a></td>
+      <td>
+        <a href="{{ url_for('indi_allsky.config_download_view', id=config.id) }}" class="text-decoration-none link-info"><span class="badge bg-primary">Download</span></a>
+        <a href="{{ url_for('indi_allsky.config_download_view', id=config.id, redact=1) }}" class="text-decoration-none link-info"><span class="badge bg-warning text-dark">Redacted</span></a>
+      </td>
       <td>{{ config.note }}</td>
     </tr>
     {% endfor %}
