add redacted download to main config view

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4744,12 +4744,15 @@ var camera_id = {{ camera_id }};
 <div class="tab-pane fade" id="nav-admin" role="tabpanel" aria-labelledby="nav-admin-tab">
 
     <div class="form-group row">
-        <div class="col-sm-2"></div>
+        <div class="col-sm-1"></div>
         <div class="col-sm-2">
             <div><a href="{{ url_for('indi_allsky.config_list_view') }}"><span class="badge bg-success">Config History</span></a></div>
         </div>
         <div class="col-sm-2">
             <div><a href="{{ url_for('indi_allsky.config_download_view', id=config_id) }}"><span class="badge bg-primary">Backup Config</span></a></div>
+        </div>
+        <div class="col-sm-2">
+            <div><a href="{{ url_for('indi_allsky.config_download_view', id=config_id, redact=1) }}"><span class="badge bg-warning text-dark">Redacted Config</span></a></div>
         </div>
         <div class="col-sm-2">
             <div><a href="{{ url_for('indi_allsky.config_restore_view') }}"><span class="badge bg-danger text-dark">Config Restore</span></a></div>
