--- a/indi_allsky/flask/templates/focus.html
+++ b/indi_allsky/flask/templates/focus.html
@@ -107,7 +107,7 @@ function showImage(image_b64) {
     };
 
 
-    img.src = "data:image/jpg;base64," + image_b64;
+    img.src = "data:image/jpeg;base64," + image_b64;
     //img.src = "data:image/png;base64," + image_b64;
 }
 
