--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3836,6 +3836,20 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.LONGTERM_KEOGRAM__MONTH_LABEL_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.LONGTERM_KEOGRAM__MONTH_LABEL_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="LONGTERM_KEOGRAM__MONTH_LABEL_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Example: {month:%B %Y}</div>
+            <div>%B is the locale specific name of the month - %b is the shortened version</div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -9232,6 +9246,7 @@ const field_names = [
     'KEOGRAM_CROP_BOTTOM',
     'LONGTERM_KEOGRAM__OFFSET_X',
     'LONGTERM_KEOGRAM__OFFSET_Y',
+    'LONGTERM_KEOGRAM__MONTH_LABEL_TEMPLATE',
     'REALTIME_KEOGRAM__MAX_ENTRIES',
     'REALTIME_KEOGRAM__SAVE_INTERVAL',
     'STARTRAILS_MAX_ADU',
