add virtualsky wiki link

--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -351,6 +351,10 @@ function loadJS(url, data, onDone, onError) {
                 {{ form_virtualsky.SHOWPLANETS(class='form-check-input') }}
             </div>
         </div>
+
+        <div class="col-sm-1">
+            <div><a href="https://github.com/aaronwmorris/indi-allsky/wiki/VirtualSky" class="text-decoration-none link-info" target="_blank">VirtualSky Wiki</a></div>
+        </div>
     </div>
 
     <div class="form-group row">
