add title templates for all sensors

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6955,6 +6955,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__A_TITLE_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__A_TITLE_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__A_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div>re>name, label, probe</pre></div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -7032,6 +7045,19 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>All sensor values will populate multiple slots starting at this slot</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__B_TITLE_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__B_TITLE_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__B_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><pre>name, label, probe</pre></div>
         </div>
     </div>
 
@@ -7115,6 +7141,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__C_TITLE_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__C_TITLE_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__C_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><pre>name, label, probe</pre></div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -7192,6 +7231,19 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>All sensor values will populate multiple slots starting at this slot</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__D_TITLE_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__D_TITLE_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__D_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><pre>name, label, probe</pre></div>
         </div>
     </div>
 
@@ -7275,6 +7327,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__E_TITLE_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__E_TITLE_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__E_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><pre>name, label, probe</pre></div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -7352,6 +7417,19 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>All sensor values will populate multiple slots starting at this slot</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.TEMP_SENSOR__F_TITLE_TEMPLATE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-4">
+            {{ form_config.TEMP_SENSOR__F_TITLE_TEMPLATE(class='form-control bg-secondary') }}
+            <div id="TEMP_SENSOR__F_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-6">
+            <div><pre>name, label, probe</pre></div>
         </div>
     </div>
 
@@ -9584,36 +9662,42 @@ const field_names = [
     'TEMP_SENSOR__A_PIN_2',
     'TEMP_SENSOR__A_USER_VAR_SLOT',
     'TEMP_SENSOR__A_I2C_ADDRESS',
+    'TEMP_SENSOR__A_TITLE_TEMPLATE',
     'TEMP_SENSOR__B_CLASSNAME',
     'TEMP_SENSOR__B_LABEL',
     'TEMP_SENSOR__B_PIN_1',
     'TEMP_SENSOR__B_PIN_2',
     'TEMP_SENSOR__B_USER_VAR_SLOT',
     'TEMP_SENSOR__B_I2C_ADDRESS',
+    'TEMP_SENSOR__B_TITLE_TEMPLATE',
     'TEMP_SENSOR__C_CLASSNAME',
     'TEMP_SENSOR__C_LABEL',
     'TEMP_SENSOR__C_PIN_1',
     'TEMP_SENSOR__C_PIN_2',
     'TEMP_SENSOR__C_USER_VAR_SLOT',
     'TEMP_SENSOR__C_I2C_ADDRESS',
+    'TEMP_SENSOR__C_TITLE_TEMPLATE',
     'TEMP_SENSOR__D_CLASSNAME',
     'TEMP_SENSOR__D_LABEL',
     'TEMP_SENSOR__D_PIN_1',
     'TEMP_SENSOR__D_PIN_2',
     'TEMP_SENSOR__D_USER_VAR_SLOT',
     'TEMP_SENSOR__D_I2C_ADDRESS',
+    'TEMP_SENSOR__D_TITLE_TEMPLATE',
     'TEMP_SENSOR__E_CLASSNAME',
     'TEMP_SENSOR__E_LABEL',
     'TEMP_SENSOR__E_PIN_1',
     'TEMP_SENSOR__E_PIN_2',
     'TEMP_SENSOR__E_USER_VAR_SLOT',
     'TEMP_SENSOR__E_I2C_ADDRESS',
+    'TEMP_SENSOR__E_TITLE_TEMPLATE',
     'TEMP_SENSOR__F_CLASSNAME',
     'TEMP_SENSOR__F_LABEL',
     'TEMP_SENSOR__F_PIN_1',
     'TEMP_SENSOR__F_PIN_2',
     'TEMP_SENSOR__F_USER_VAR_SLOT',
     'TEMP_SENSOR__F_I2C_ADDRESS',
+    'TEMP_SENSOR__F_TITLE_TEMPLATE',
     'TEMP_SENSOR__OPENWEATHERMAP_APIKEY',
     'TEMP_SENSOR__WUNDERGROUND_APIKEY',
     'TEMP_SENSOR__ASTROSPHERIC_APIKEY',
