--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6964,7 +6964,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__A_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
-            <div>re>name, label, probe</pre></div>
+            <div><pre>name, label, probe</pre></div>
         </div>
     </div>
 
