--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6964,6 +6964,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__A_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Available variables:</div>
             <div><pre>name, label, probe</pre></div>
         </div>
     </div>
@@ -7057,6 +7058,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__B_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Available variables:</div>
             <div><pre>name, label, probe</pre></div>
         </div>
     </div>
@@ -7150,6 +7152,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__C_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Available variables:</div>
             <div><pre>name, label, probe</pre></div>
         </div>
     </div>
@@ -7243,6 +7246,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__D_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Available variables:</div>
             <div><pre>name, label, probe</pre></div>
         </div>
     </div>
@@ -7336,6 +7340,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__E_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Available variables:</div>
             <div><pre>name, label, probe</pre></div>
         </div>
     </div>
@@ -7429,6 +7434,7 @@ var camera_id = {{ camera_id }};
             <div id="TEMP_SENSOR__F_TITLE_TEMPLATE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Available variables:</div>
             <div><pre>name, label, probe</pre></div>
         </div>
     </div>
