--- a/indi_allsky/flask/templates/network.html
+++ b/indi_allsky/flask/templates/network.html
@@ -36,7 +36,12 @@ var camera_id = {{ camera_id }};
 <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Network Manager is not available</div>
 {% endif %}
 
+{% if docker %}
 <hr>
+<div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Containerized environment detected.  Network controls will not function.</div>
+{% endif %}
+<hr>
+
 
 <div class="tab-content" id="nav-tabContent">
 
