--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -177,6 +177,28 @@
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/terminal-fill.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Log</span> </a>
                             </li>
                             <li>
+                                <a href="{{ url_for('indi_allsky.support_info_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/info-circle.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Support Info</span> </a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </li>
+
+
+                    {% if current_user.is_authenticated or login_disabled %}
+                    <li class="dropdown">
+                        <a href="#" class="nav-link link-info dropdown-toggle px-sm-0 px-1" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fs-5 bi-bootstrap"></i>
+                            <img src="{{ url_for('indi_allsky.static', filename='svg/gear-fill.svg') }}" width="16" height="16" alt="System">
+                            <span class="ms-1 d-none d-sm-inline">System</span>
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdown">
+                            <li>
+                                <a href="{{ url_for('indi_allsky.config_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/toggles.svg') }}" width="16" height="16" alt="Config"><span class="ms-1 d-none d-sm-inline">Config</span> </a>
+                            </li>
+                            <li>
                                 <a href="{{ url_for('indi_allsky.network_manager_view') }}" class="dropdown-item">
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/wifi.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Network</span> </a>
                             </li>
@@ -189,22 +211,10 @@
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/lightning-charge-fill.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">GPIO Control</span> </a>
                             </li>
                             <li>
-                                <a href="{{ url_for('indi_allsky.support_info_view') }}" class="dropdown-item">
-                                    <img src="{{ url_for('indi_allsky.static', filename='svg/info-circle.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Support Info</span> </a>
+                                <a href="{{ url_for('indi_allsky.system_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/gear-fill.svg') }}" width="16" height="16" alt="System Info"><span class="ms-1 d-none d-sm-inline">System Info</span> </a>
                             </li>
-                            {% endif %}
                         </ul>
-                    </li>
-
-
-                    {% if current_user.is_authenticated or login_disabled %}
-                    <li>
-                        <a href="{{ url_for('indi_allsky.config_view') }}" class="nav-link link-info px-sm-0 px-2">
-                            <img src="{{ url_for('indi_allsky.static', filename='svg/toggles.svg') }}" width="16" height="16" alt="Config"><span class="ms-1 d-none d-sm-inline">Config</span> </a>
-                    </li>
-                    <li>
-                        <a href="{{ url_for('indi_allsky.system_view') }}" class="nav-link link-info px-sm-0 px-2">
-                            <img src="{{ url_for('indi_allsky.static', filename='svg/gear-fill.svg') }}" width="16" height="16" alt="System"><span class="ms-1 d-none d-sm-inline">System</span> </a>
                     </li>
                     {% endif %}
 
