--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -55,18 +55,6 @@
                         <a href="{{ url_for('indi_allsky.image_loop_view') }}" class="nav-link link-info px-sm-0 px-2">
                             <img src="{{ url_for('indi_allsky.static', filename='svg/repeat.svg') }}" width="16" height="16" alt="Loop"><span class="ms-1 d-none d-sm-inline">Loop</span></a>
                     </li>
-                    <li>
-                        <a href="{{ url_for('indi_allsky.sqm_view') }}" class="nav-link link-info px-sm-0 px-2">
-                            <img src="{{ url_for('indi_allsky.static', filename='svg/cloud-moon-fill.svg') }}" width="16" height="16" alt="SQM"><span class="ms-1 d-none d-sm-inline">SQM</span></a>
-                    </li>
-                    <li>
-                        <a href="{{ url_for('indi_allsky.chart_view') }}" class="nav-link link-info px-sm-0 px-2">
-                            <img src="{{ url_for('indi_allsky.static', filename='svg/graph-up.svg') }}" width="16" height="16" alt="Charts"><span class="ms-1 d-none d-sm-inline">Charts</span></a>
-                    </li>
-                    <li>
-                        <a href="{{ url_for('indi_allsky.sensor_panel_view') }}" class="nav-link link-info px-sm-0 px-2">
-                            <img src="{{ url_for('indi_allsky.static', filename='svg/journal-medical.svg') }}" width="16" height="16" alt="Sensor Panel"><span class="ms-1 d-none d-sm-inline">Sensor Panel</span></a>
-                    </li>
 
                     <li class="dropdown">
                         <a href="#" class="nav-link link-info dropdown-toggle px-sm-0 px-1" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -119,6 +107,42 @@
                     <li class="dropdown">
                         <a href="#" class="nav-link link-info dropdown-toggle px-sm-0 px-1" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fs-5 bi-bootstrap"></i>
+                            <img src="{{ url_for('indi_allsky.static', filename='svg/info-square.svg') }}" width="16" height="16" alt="Info">
+                            <span class="ms-1 d-none d-sm-inline">Info</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdown">
+                            <li>
+                                <a href="{{ url_for('indi_allsky.sqm_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/cloud-moon-fill.svg') }}" width="16" height="16" alt="SQM"><span class="ms-1 d-none d-sm-inline">SQM</span></a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('indi_allsky.chart_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/graph-up.svg') }}" width="16" height="16" alt="Charts"><span class="ms-1 d-none d-sm-inline">Charts</span></a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('indi_allsky.sensor_panel_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/journal-medical.svg') }}" width="16" height="16" alt="Sensor Panel"><span class="ms-1 d-none d-sm-inline">Sensor Panel</span></a>
+                            </li>
+                            {% if current_user.is_authenticated or login_disabled %}
+                            <li>
+                                <a href="{{ url_for('indi_allsky.darks_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/subtract.svg') }}" width="16" height="16" alt="Dark Library"><span class="ms-1 d-none d-sm-inline">Dark Library</span></a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('indi_allsky.rolling_adu_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/info-square-fill.svg') }}" width="16" height="16" alt="ADU History"><span class="ms-1 d-none d-sm-inline">ADU History</span></a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('indi_allsky.image_lag_view') }}" class="dropdown-item">
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/stopwatch.svg') }}" width="16" height="16" alt="Image Lag"><span class="ms-1 d-none d-sm-inline">Image Lag</span></a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="nav-link link-info dropdown-toggle px-sm-0 px-1" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fs-5 bi-bootstrap"></i>
                             <img src="{{ url_for('indi_allsky.static', filename='svg/tools.svg') }}" width="16" height="16" alt="Tools">
                             <span class="ms-1 d-none d-sm-inline">Tools</span>
                         </a>
@@ -143,18 +167,6 @@
                             <li>
                                 <a href="{{ url_for('indi_allsky.generate_view') }}" class="dropdown-item">
                                     <img src="{{ url_for('indi_allsky.static', filename='svg/plus-square-dotted.svg') }}" width="16" height="16" alt="Generate"><span class="ms-1 d-none d-sm-inline">Generate</span></a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for('indi_allsky.darks_view') }}" class="dropdown-item">
-                                    <img src="{{ url_for('indi_allsky.static', filename='svg/subtract.svg') }}" width="16" height="16" alt="Dark Library"><span class="ms-1 d-none d-sm-inline">Dark Library</span></a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for('indi_allsky.rolling_adu_view') }}" class="dropdown-item">
-                                    <img src="{{ url_for('indi_allsky.static', filename='svg/info-square-fill.svg') }}" width="16" height="16" alt="ADU History"><span class="ms-1 d-none d-sm-inline">ADU History</span></a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for('indi_allsky.image_lag_view') }}" class="dropdown-item">
-                                    <img src="{{ url_for('indi_allsky.static', filename='svg/stopwatch.svg') }}" width="16" height="16" alt="Image Lag"><span class="ms-1 d-none d-sm-inline">Image Lag</span></a>
                             </li>
                             <li>
                                 <a href="{{ url_for('indi_allsky.focus_view') }}" class="dropdown-item">
