new icon for log

--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -186,7 +186,7 @@
                             </li>
                             <li>
                                 <a href="{{ url_for('indi_allsky.log_view') }}" class="dropdown-item">
-                                    <img src="{{ url_for('indi_allsky.static', filename='svg/terminal-fill.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Log</span> </a>
+                                    <img src="{{ url_for('indi_allsky.static', filename='svg/terminal.svg') }}" width="16" height="16" alt="Log"><span class="ms-1 d-none d-sm-inline">Log</span> </a>
                             </li>
                             <li>
                                 <a href="{{ url_for('indi_allsky.support_info_view') }}" class="dropdown-item">
